fixed bug with footer being stuck in wrong place

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6,12 +6,7 @@
   --content-height: calc(100vh - var(--header-height) - var(--footer-height));
 }
 
-html {
-  height: 100%;
-}
-
 body {
-  height: 100%;
   color: var(--black);
   font-weight: normal;
   font-size: 1.1rem;
